5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1807_2567.log
== TEST (2019-06-07 19:51:15) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in z:
	s = z[i]*"*"
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:52:27) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
n = z[i]
print(n)
#for i in z:
#	s = z[i]*"*"
#	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:53:03) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
n = z[0]
print(n)
for i in z:
	s = z[0]*"*"
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:53:53) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
print(n)

for i in z:
	s = z*"*"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:54:06) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))


for i in z:
	s = z*"*"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:56:30) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

s = 5*"*"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:56:41) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

s = 5*"*"
print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:57:47) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

s = 5*"*"
for i in s
	print(s)

-- ERROR:
File "XXXX", line 5
    for i in s
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 19:57:57) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

s = 5*"*"
for i in s:
	print(s)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:04:13) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
for i in range(size(z)):
	print("*"*(z-i))

for i in range(size(z)):	
	print("*"*(-z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:05:46) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(size(z)):
	print("*"*size(z)-i))

for i in range(size(z)):	
	print("*"*-size(z)+i))
	

-- ERROR:
File "XXXX", line 5
    print("*"*size(z)-i))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:05:55) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(size(z)):
	print("*"*size(z)-i)

for i in range(size(z)):	
	print("*"*-size(z)+i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:06:40) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
a = size(z)
for i in range(size(z)):
	print("*"*z-i)

for i in range(size(z)):	
	print("*"*-z+i)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:08:10) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
a = size(z)
for i in range(size(z)):
	print("*"*(z-i))

for i in range(size(z)):	
	print("*"*(-z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:09:14) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
a = size(z)
for i in range(z):
	print("*"*(z-i))

for i in range(z):	
	print("*"*(-z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:14:40) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
print(range(z))
for i in range(z):
	print("*"*(z-i))

#for i in range(z):	
#	print("*"*(z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:15:45) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))
print(range(z))
for i in range(z):
#	print("*"*(z-i))
	print(i)
#for i in range(z):	
#	print("*"*(z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:18:40) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(z):	
	print("*"*(z[-1]+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:20:37) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(z):	
	print("*"*(z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:21:52) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(-z):	
	print("*"*(z+i))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:24:11) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(z):	
#	print("*"*(z+i))
	print(i)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:39) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(z):	
	print("*"*(i+1))
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:26:26) 
-- CODE:
from numpy import *
z = int(input("Digite um numero maior que 1: "))

for i in range(z):
	print("*"*(z-i))
	
for i in range(z):	
	print("*"*(i+1))
		

-- EXECUTION TIME:
1.07475
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
